# fuego

./: .gitattributes  .gitignore  COLORS.md  LICENSE  README.md  ROADMAP.md  SETUP_UX.md  SKILL.md  dashboard.html  decrypt_wallet.js  init-wallet.sh  package.json  setup-wallet.js  test_decrypt.js  test_sign.mjs  test_x402_endpoint.py  tsconfig.json
.github/workflows/: release.yml
dashboard/: README.md  dashboard.html  serve.sh  theme.css
scripts/: complete_jupiter_to_fuego_final.mjs  fuego_transfer.mjs  jupiter_with_fresh_blockhash.mjs  package.json  purch.py  sign_and_submit.py  test_agent_passwords.js  test_password.py  test_x402python.py  unlock.js  x402_faremeter.ts  x402_jupiter_fresh_blockhash.mjs  x402_jupiter_via_faremeter.mjs  x402_purch.js  x402_purch.mjs  x402_purch_test.mjs
scripts/jupiter/: debug_bonk.mjs  debug_tx.mjs  jupiter_price.mjs  jupiter_swap.mjs  jupiter_swap_regular.mjs
server/: Cargo.toml
server/src/: main.rs
server/src/utils/: mod.rs
src/: crypto.ts  index.ts  types.ts
src/__tests__/: wallet.test.ts
src/cli/: init.ts
