[package]
name = "fuego-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
axum = "0.7.5"
serde_json = "1.0.115"
serde = "1.0.196"
solana-client = "=2.0.7"
solana-sdk = "=2.0.7"
spl-associated-token-account = "4.0.0"
solana-transaction-status = "=2.0.7"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
spl-token = "6.0.0"
spl-memo = "5.0.0"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.22.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "tokio-native-tls"] }